testsuite/negative/events.n
using System;

public delegate MyHandler () :  void;

class ErrorCS0079 {
        public delegate Handler () :  void;
        event privateEvent :  Handler;
        public event OnFoo :  Handler {
                add {
                        privateEvent += value;
                }
                remove {
                        privateEvent -= value;
                }
        }
         Callback() : void { {
                when (privateEvent != null)
                     OnFoo();  // E: event .* can only appear on the left-side
        }
        }
}


class WithEvent {
  public event Goo : MyHandler;
  public static event Goo1 : MyHandler;
}

class WantEvent {
  foo () : void {
    def x = WithEvent ();
    x.Goo (); // E: event `WithEvent.Goo' can only appear on the left-side
  }

  faa () : void {
    WithEvent.Goo1 (); // E: event `WithEvent.Goo1' can only appear on the left-side
  }
}
